# WebCollector

./: .gitignore  .gitmodules  Dockerfile  README.md  __init__.py  example.env  main.py  requirements.txt
.github/workflows/: mikanani-deploy.yml  mikanani-dockerimage-ci.yml
common/: logger.py
deployments/docker/mikanani/: Dockerfile
deployments/docker/mikanani-v2/: sidecar.Dockerfile  worker.Dockerfile
deployments/kubernetes/mikanani-v2/: service.yaml  worker.yaml
mikanani/: example.env  pyproject.toml  requirements.txt
mikanani-v2/: go.mod  go.sum  openapi.yaml
mikanani-v2/configs/: config.template.yaml  config.yaml  generate_from_temp.py
mikanani/config/: example.yaml
mikanani/config/media/: dungeonmeshi.yaml  example.yaml  furiren_baha.yaml
mikanani/config/rabbitmqInit/: example_rabbitmq_init.py
mikanani/protos/: mongodb_crud.proto
mikanani/src/: __init__.py  configs.py  db_helper.py  dispatcher.py  errors.py  grpc_service.py  job.py  logger.py  main.py  mikanani_grpc_pb2.py  mikanani_grpc_pb2.pyi  mikanani_grpc_pb2_grpc.py  mongodb_crud.py  schema.py  sync.py  utils.py  worker.py
mikanani/src/grpc/: mongodb_crud.py  mongodb_crud_pb2.py  mongodb_crud_pb2.pyi  mongodb_crud_pb2_grpc.py
mikanani/src/grpc_utils/: client_demo.py  mikanani_grpc_pb2.py  mikanani_grpc_pb2.pyi  mikanani_grpc_pb2_grpc.py  mongodb_crud.py  mongodb_crud_pb2.py  mongodb_crud_pb2.pyi  mongodb_crud_pb2_grpc.py
mikanani/tests/: rabbitmq_testproducer.py  test_utils.py
news-subscriber/news-subscriber-bff/: Dockerfile  Makefile  go.mod  go.sum  openapi.yaml
(+98 files in other folders)
